Add -Dnet.bytebuddy.experimental=true